5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1593_2908.log
== TEST (2019-03-26 11:02:35) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))

d = print((a**2 + b**2 + c**2)/(a + b + c))
round(d, 7)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    round(d, 7)
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:03:03) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))

d = print((a**2 + b**2 + c**2)/(a + b + c))
round(d, 7)

-- EXECUTION TIME:
0.157934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2908/main.py", line 6, in <module>
    round(d, 7)
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:03:06) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))

d = print((a**2 + b**2 + c**2)/(a + b + c))
round(d, 7)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    round(d, 7)
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:03:35) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))

d = print((a**2 + b**2 + c**2)/(a + b + c))
ptint(round(d, 7))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptint(round(d, 7))
NameError: name 'ptint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:03:56) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))

d = print((a**2 + b**2 + c**2)/(a + b + c))
print(round(d, 7))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 7))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:46) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))

print(round((a**2 + b**2 + c**2)/(a + b + c)), 7)




-- OUTPUT:
26 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:44) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))

print(round(((a**2 + b**2 + c**2)/(a + b + c)), 7)
		




-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:50) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))

print(round(((a**2 + b**2 + c**2)/(a + b + c)), 7)
		




-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:58) 
-- CODE:
a = float(input("Digite o valor de a: "))
b = float(input("Digite o valor de b: "))
c = float(input("Digite o valor de c: "))


		




-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:07:35) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

print((a**2 + b**2 + c**2)/(a + b + c))

		




-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:08:12) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

print(round((a**2 + b**2 + c**2)/(a + b + c)), 7)


		




-- OUTPUT:
26 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:15) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

frm = print((a**2 + b**2 + c**2)/(a + b + c))
print(round(frm, 7))


		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(frm, 7))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:57) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

frm = print((a**2 + b**2 + c**2)/(a + b + c))



		




-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:18) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

frm = print((a**2 + b**2 + c**2)/(a + b + c))
round(frm, 7)


		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    round(frm, 7)
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:27) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

frm = print((a**2 + b**2 + c**2)/(a + b + c))
round(frm, 7)


		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    round(frm, 7)
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:12:24) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

frm = print((a**2 + b**2 + c**2)/(a + b + c))
print(round(frm, 7))



		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(frm, 7))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:12:52) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

frm = print((a**2 + b**2 + c**2)/(a + b + c))
print(round(frm, 7)



		




-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:12:59) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

frm = print((a**2 + b**2 + c**2)/(a + b + c))
print(round(frm, 7))



		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(frm, 7))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:13:32) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

d = print((a**2 + b**2 + c**2)/(a + b + c))
print(round(d, 7))




		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 7))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:13:59) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

formula = print((a**2 + b**2 + c**2)/(a + b + c))
print(round(formula, 7))




		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(formula, 7))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:09) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

formula = print((a**2 + b**2 + c**2)/(a + b + c))
print(round(formula, 7))


		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(formula, 7))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:17:39) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

formula = print((a**2 + b**2 + c**2)/(a + b + c))
print(round(formula, 7))


		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(formula, 7))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:22:38) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

formula = print((a**2 + b**2 + c**2)/(a + b + c))
round(formula, 7)


		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    round(formula, 7)
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:24:40) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

formula = (a**2 + b**2 + c**2)/(a + b + c)
print(round(formula, 7))

		




-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:24:46) 
-- CODE:
a = int(input("Digite o valor de a: "))
b = int(input("Digite o valor de b: "))
c = int(input("Digite o valor de c: "))

formula = (a**2 + b**2 + c**2)/(a + b + c)
print(round(formula, 7))

		




-- EXECUTION TIME:
0.149332
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
